--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,12 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - TRUSTED_HOSTS=${TRUSTED_HOSTS}
     restart: unless-stopped
+    command: >
+      /bin/sh -c "
+      chown -R www-data:www-data /opt/kimai/var/cache &&
+      chmod -R 775 /opt/kimai/var/cache &&
+      /opt/kimai/bin/console cache:clear &&
+      apache2-foreground"
 
 volumes:
   data:
